--- a/src/Component/Header/Cart/cart.module.css
+++ b/src/Component/Header/Cart/cart.module.css
@@ -1,201 +1,24 @@
-.cart-items {
-    background: #f6f9fc;
-    height: auto;
-    padding: 50px 0;
-  }
-  
-  .cart-items .cart-details {
-    width: 70%;
-  }
-  
-  .cart-items .cart-total {
-    width: 30%;
-    margin-top: 30px;
-    margin-left: 30px;
-    height: 130px;
-  }
-  .cart-list {
-    background: white;
-    margin-top: 30px;
-  }
-  .cart-items .img {
-    width: 150px;
-    height: 150px;
-  }
-  .cart-items img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-  .cart-items .cart-details h3 {
-    font-size: 20px;
-    font-weight: 500;
-    margin-top: 20px;
-  }
-  .cart-items .cart-details h4 {
-    font-size: 15px;
-    font-weight: 400;
-    margin-top: 50px;
-    color: grey;
-  }
-  .cart-items h4 span {
-    color: #e94560;
-    margin-left: 20px;
-    font-weight: 500;
-  }
-  .removeCart {
-    background: none;
-    font-size: 25px;
-    text-align: right;
-    margin-right: 10px;
-  }
-  .cartControl {
-    margin-top: 50px;
-  }
-  .cartControl button {
-    width: 40px;
-    height: 40px;
-    margin: 10px;
-    border-radius: 5px;
-    font-size: 20px;
-  }
-  .incCart {
-    background: none;
-    border: 1px solid rgb(3 0 71 / 9%);
-    color: #e94560;
-  }
-  .desCart {
-    background: #f6f9fc;
-  }
-  .cart-total h4 {
-    font-size: 15px;
-    font-weight: 400;
-  }
-  .cart-total h3 {
-    font-size: 20px;
-    font-weight: 500;
-    color: #e94560;
-  }
-  .cart-total h2 {
-    font-size: 18px;
-    margin-bottom: 20px;
-    border-bottom: 1px solid rgb(3 0 71 / 9%);
-    padding-bottom: 10px;
-    color: #e94560;
-  }
-  .no-items {
-    color: #e94560;
-    font-size: 18px;
-    margin-top: 30px;
-    height: 130px;
-  }
-  .control-btn button {
-    background: white;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.5s;
-    padding: 2px;
-  }
-  
-  .control-btn .next {
-    position: absolute;
-    top: 40%;
-    right: 20px;
-  }
-  
-  .control-btn .prev {
-    position: absolute;
-    top: 40%;
-    left: 20px;
-    z-index: 99;
-  }
-  .control-btn .icon {
-    font-size: 25px;
-  }
-  
-  .count{
-    margin-left: 10rem;
-  }
-  .trash{
-    margin-top: -2rem;
-    margin-left: 50rem;
-  }
-  .price{
-    margin-left: 48rem;
+.select {
+  /* Your existing styles for the select element */
 
-  }
-  .sizeCount1{
-    margin-left: 2rem;
-    
-  }
-  .size{
-    border-radius: 4rem;
-  }
+  /* Remove the default arrow icon */
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 
-  @media (min-width:360px) and (max-width:640px) {
-    .count{
-      margin-left: .6rem;
-    }
-    .trash{
-      margin-top: -2rem;
-      margin-left: 1.5rem;
-    }
-    .price{
-      margin-left: 10rem;
-  
-    }
-  }
+}
+.select::-ms-expand {
+  display: none;
+}
+.cartDiv{
+  margin-bottom: 1rem;
 
+  padding: 10px;
+  box-shadow: 5px 5px #888888;
+}
 
-  /* drop down css */
-  .dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    margin-left: 20rem;
+@media (max-width: 768px) {
+  .hideprice {
+      display: none;
   }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    margin-left: -20rem;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
+}
