--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,12 @@
 @tailwind utilities;
 
  body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} 
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -17,12 +16,10 @@ code {
 }
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+
 }  body {
   font-family: "Poppins", sans-serif;
-  background-color: #f9f9f9;
+  background-color: white;
   color: #000;
 } 
  h1,
