--- a/src/Component/Navbar/Navbar.module.css
+++ b/src/Component/Navbar/Navbar.module.css
@@ -89,6 +89,7 @@ nav {
     transition: background-color 0.3s ease-in-out;
     z-index: 999;
     color: black;
+    position: sticky;
   }
   .length1 {
     position: absolute;
