--- a/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
@@ -4,6 +4,10 @@
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  padding-left: 0px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ border: 3px solid rgba(196, 222, 0, 0);
 }
 .inputField{
   width: 200px;
@@ -86,17 +90,6 @@ textarea {
   border: 1px solid #ccc;
 }
 
-.formGroup {
-  width:900px;
-  display:'flex';
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-left: 0px;
-
-}
-
-
-
 .sizeButtons {
   display: flex;
   flex-direction: column;
@@ -136,5 +129,18 @@ width: 20%;
   color: '#333';
   padding: '5px';
 }
+.respo{
+  display: flex;
+flex-direction: row;
 
+}
 
+@media only screen and (max-width: 518px) {
+
+.respo{
+  display: flex;
+flex-direction: column;
+
+}
+ 
+ }
