--- a/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
@@ -9,7 +9,7 @@
   position: absolute;
 
   height: 37.6rem;
-  width: 50px;
+  width: 220px;
   background-color: brown;
   transition: width 0.8s;
 }
@@ -17,30 +17,29 @@
 .sidebar_items {
   color: rgb(236, 65, 65);
   list-style: none;
-
   display: flex;
   flex-direction: column;
 }
 
 .item {
   display: flex;
-  width: 100%;
-  padding: 1rem;
+  width: 220px;
+  padding: 1rem
 }
 
 .nombres {
   margin-left: 20px;
   width: 80%;
-  display: none;
+  display: block;
 }
 
 .sidebar_items li:hover {
   background: rgb(136, 101, 104);
 }
 
-.sidebar:hover {
+/* .sidebar:hover {
   width: 15rem;
-}
+} */
 
 .sidebar:hover .nombres {
   display: block;
@@ -68,7 +67,11 @@ p {
   /* .main {
     border: 1px solid blue;
   } */
-
+  .nombres {
+    
+    display: none;
+  }
+  
   .sidebar_items {
     flex-direction: row;
     text-indent: -15px;
