--- a/src/Component/Navbar/Profile/AdminDashboard/productRequest.module.css
+++ b/src/Component/Navbar/Profile/AdminDashboard/productRequest.module.css
@@ -1,6 +1,6 @@
 .sliderContainer {
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 500px;
     padding: 0 20px;
   }
   
@@ -17,67 +17,11 @@
     box-shadow: 0 2px 8px rgba(196, 38, 38, 0.878);
     
   }
-  /* .bg{
-    background-color: #fff;
-    margin-top: 1rem;
-  
-  } */
-  
-  /* .card img {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: 25rem;
-  } */
-  /* .seeMore{
-    margin-left: 35rem;
-  } */
-  /* @media only screen and (max-width: 768px) { */
-    /* .card {
-      width: 100%;
-      height: auto;
-    } */
-  
-    /* .card img {
-      height: 25rem;
-      border-radius: 10px 10px 0 0;
-    } */
-  /* }
-  @media only screen and (max-width: 589px) {
-    .card {
-      width: 14rem;
-    }
-  
-    .card img {
-      height: 20rem;
-      border-radius: 10px 10px 0 0;
-    }
-    .seeMore{
-      margin-left: 10rem;
-    }
-  } */
-  /* .card h2 {
-    font-size: 24px;
-    margin-top: 20px;
+  .container{
+    overflow-y: scroll;
+    margin-left: 100px;
   }
-  
-  .card p {
-    font-size: 16px;
-    margin-top: 10px;
-  } */
-  
-  /* @font-face {
-    font-family: MEDIUM;
-    src: url("../../../../Poppinsfonts/Poppins-Medium.ttf");
-  }
-  .customerheading p{
-    font-family:MEDIUM ;
-    color: #0d0d0c;
-  }
-  .customerheading h2{
-    font-family:MEDIUM ;
-    color: #0d0d0c;
-  } */
+
   .control-btn button {
     background: white;
     width: 30px;
@@ -107,32 +51,20 @@
   .control-btn .icon {
     font-size: 25px;
   }
-  
-  /* .prices{
-    margin-left: 0.5rem;
-    margin-top: -1rem;
-    
-  }
-  
-  .description{
-    margin-top: -.7rem;
-    margin-left: 0.5rem;
-  
-  }
-  .title{
-    margin-left: 0.5rem;
-    font-weight:lighter
-    ;
-  
-  } */
-
   .imgeee{
-    height: 37rem;
-    width:60rem
+    height: 200px;
+    width:200px
   }
   @media only screen and (max-width: 589px) {
     .imgeee{
       height: 20rem;
       width:25rem
-    }}
+    }
+    .container{
+      overflow-y: scroll;
+      margin-left: 0px
+    }
+  
+  
+  }
   
