--- a/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
@@ -9,7 +9,7 @@
   position: absolute;
 
   height: 37.6rem;
-  width: 220px;
+  width: 200px;
   background-color: brown;
   transition: width 0.8s;
 }
@@ -23,7 +23,7 @@
 
 .item {
   display: flex;
-  width: 220px;
+  width: 200px;
   padding: 1rem
 }
 
@@ -62,6 +62,12 @@ p {
 @media only screen and (max-width: 598px) {
   .body {
     background-color: rgb(224, 214, 245);
+  }
+  .sidebar {
+   
+
+    width: 0px
+ 
   }
 
   /* .main {
@@ -105,6 +111,7 @@ p {
   i {
     margin: auto;
   }
+  
 }
 
 .space {
