--- a/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
@@ -1,18 +1,31 @@
-
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+} */
+.mainDiv {
+  display: flex;
+  height: 100%;
+  width: 100%;
 }
-
 .sidebar {
-  position: absolute;
+  /* position: absolute; */
 
-  height: 37.6rem;
-  width: 200px;
   background-color: brown;
-  transition: width 0.8s;
+  /* transition: width 0.8s; */
 }
+
+.content {
+  width: 80%;
+  /* justify-content: center; */
+  /* background: blue; */
+}
+
+/* sideBar {
+  min-width: 100px;
+  max-width: 100px;
+  background: red;
+} */
 
 .sidebar_items {
   color: rgb(236, 65, 65);
@@ -24,7 +37,7 @@
 .item {
   display: flex;
   width: 200px;
-  padding: 1rem
+  padding: 1rem;
 }
 
 .nombres {
@@ -34,7 +47,7 @@
 }
 
 .sidebar_items li:hover {
-  background: rgb(136, 101, 104);
+  background: #252831;
 }
 
 /* .sidebar:hover {
@@ -51,6 +64,18 @@
   padding-bottom: 50px;
 } */
 
+.body {
+  display: flex;
+  /* color: #e1e9fc; */
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 20px; */
+  list-style: none;
+  height: 100vh;
+  text-decoration: none;
+  font-size: 18px;
+}
+
 h1 {
   text-align: center;
 }
@@ -63,33 +88,32 @@ p {
   .body {
     background-color: rgb(224, 214, 245);
   }
-  .sidebar {
-   
-
-    width: 0px
- 
+  .mainDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   /* .main {
     border: 1px solid blue;
   } */
   .nombres {
-    
     display: none;
   }
+
   
-  .sidebar_items {
-    flex-direction: row;
-    text-indent: -15px;
-  }
 
   .sidebar {
-   z-index: 999;
+    /* z-index: 999; */
     position: sticky;
 
     width: 100%;
     height: 50px;
-    top: 0;
+    top: 10px;;
+  }
+  .sidebar_items {
+    flex-direction: row;
+    text-indent: -15px;
   }
 
   .sidebar:hover {
@@ -111,7 +135,6 @@ p {
   i {
     margin: auto;
   }
-  
 }
 
 .space {
