--- a/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
@@ -1,17 +1,19 @@
 
 .container {
    /* background-image: url("https://htmlcolorcodes.com/assets/images/html-color-codes-color-tutorials.jpg"); */
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+   box-shadow: inset 10px 5px 5px rgb(255, 1, 1);
+   border-radius: 5px;
  padding-left: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
+
  border: 3px solid rgba(196, 222, 0, 0);
 }
 .inputField{
-  width: 200px;
+  width: 400px;
   border: 1px solid ;
+  border-radius: 5px;
 }
 
 
@@ -113,7 +115,10 @@ width: 20%;
 }
 
 .blue {
-  background-color: greenyellow
+  border-radius: 5px;
+  background-color: rgb(148, 151, 144);
+  display: flex;
+  flex-direction: row;
 }
 
 
@@ -142,5 +147,21 @@ flex-direction: row;
 flex-direction: column;
 
 }
+
  
  }
+/* Example media query for screens up to 768px wide */
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column; /* Stack items vertically on small screens */
+    align-items: center;
+  }
+
+  /* Adjust input fields to take up full width */
+  .inputField {
+    width: 100%;
+  }
+
+  /* Adjust other styling for responsiveness */
+  /* ... */
+}
