--- a/src/Component/Shopingsection/Productdetails/Product.module.css
+++ b/src/Component/Shopingsection/Productdetails/Product.module.css
@@ -56,16 +56,17 @@ body {
 .heads {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
-.icons {
+/* .icons {
   position: absolute;
   display: flex;
   flex-direction: row;
   right: 0;
-}
+} */
 .wishicon {
   color: red;
-  width: 90px;
+  width: 50px;
   height: 30px;
   background-color: rgb(247, 216, 217);
   display: flex;
@@ -156,11 +157,11 @@ body {
   justify-content: center;
   align-items: center;
 }
-.lasthead {
+/* .lasthead {
   height: 150px;
   width: 500px;
   border: solid #c9e0eb;
-}
+} */
 .headone {
   height: 60px;
   width: 100%;
@@ -175,12 +176,7 @@ body {
   height: 100%;
   width: 10%;
 }
-.tabs {
-  display: flex;
-  flex-direction: row;
-  /* width: 80%; */
-  /* margin-left: 70px; */
-}
+
 .activeHeading {
   color: red;
 }
@@ -263,11 +259,8 @@ body {
   justify-content: center;
   align-items: center;
 }
-.tottal {
-  /* justify-content: 2rem; */
-  /* margin-left: -2rem; */
-}
-.desgin {
+
+/* .desgin {
   border-radius: 1rem;
   height: 4rem;
 
@@ -275,15 +268,16 @@ body {
 
   margin-left: 0rem;
   justify-content: 1rem;
-}
+} */
 @media (min-width: 100px) and (max-width: 640px) {
   .tottal {
-    justify-content: 0.2rem;
+    
+    margin: 10px;
     margin-left: -1rem;
     display: flex;
     justify-content: "center";
     align-items: "center";
-    flex-direction: row;
+    /* flex-direction: row; */
     font-weight: 0.1rem;
   }
   .checkbox {
@@ -302,52 +296,36 @@ body {
     flex-direction: column;
   }
 }
-.add-to-cart {
+.add_to_cart {
   display: flex;
   flex-direction: row;
-  background-color: #e45641;
+  background-color: #BF0A2A;
   border-radius: 0rem;
-  height: 75px;
+  width: 370px;
+  height: 65px;
+  color: #f5f5f5;
   justify-content: center;
   align-items: center;
 }
 .descrip {
-  /* margin: 70px; */
   border-top: 0.4rem solid rgb(235, 13, 13);
-  width: 80%;
+  /* width: 100%; */
+  width: 99%;
   /* margin-right: 30rem; */
 }
 .text1 {
   font-weight: 0.1rem;
 }
-.heads {
-  display: flex;
-  flex-direction: row;
-}
-
-.heads {
-  display: flex;
-  flex-direction: row;
-}
 .icons {
-  position: absolute;
+  /* position: absolute; */
   display: flex;
   flex-direction: row;
   right: 0;
 }
-.wishicon {
-  color: red;
-  width: 90px;
-  height: 30px;
-  background-color: rgb(247, 216, 217);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.mainicon {
+/* .mainicon {
   height: 30px;
   width: 30px;
-}
+} */
 .tagandshare {
   height: 30px;
   width: 40px;
@@ -428,7 +406,7 @@ body {
   height: 150px;
   width: 370px;
   border: solid #c9e0eb;
-  margin-left: 10px;
+  /* margin-left: 20px; */
 }
 .headone {
   height: 60px;
