--- a/src/Component/Header/Home/AboutSection/About.module.css
+++ b/src/Component/Header/Home/AboutSection/About.module.css
@@ -19,15 +19,16 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 70%;
+  height: 100%;
   background-color: black;
-  opacity: 0.5;
+  opacity: 0.2;
 }
 .Headingtext{
-  color: aliceblue;
+  color: white;
   align-items: center;
   font-weight: bolder;
   font-size: x-large;
+
 }
 .contenttext{
   margin-top: 20px;
@@ -36,6 +37,8 @@
  justify-content: center;
   align-items: center;
   text-align: center;
+  z-index: 999;
+  opacity: 1;
 }
 .aboutustext{
   font-size: 4rem;
@@ -59,7 +62,6 @@
   height: 40%;
   background-color: black;
   opacity: 0.5;
-  margin-bottom: 160px;
 }
 .ourvision{
   position: absolute;
@@ -133,7 +135,7 @@
     font-size: .6rem;
   }
   .aboutustext{
-    font-size: 4rem;
+    font-size: 2rem;
     font-weight: bolder;
     color: white;
  
@@ -156,18 +158,23 @@
     background-color: black;
     opacity: 0.5;
     margin-bottom: 160px;
+    
   }
   .ourvision{
     position: absolute;
     bottom: 0;
-    left: 0;
-    width: 45%;
+    right: 0;
+    width: 100%;
     height: 40%;
     background-color: black;
     opacity: 0.5;
     margin-bottom: 160px;
+    
   }
   .mainvision{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     width: 100%;
     height: 300px;
