--- a/src/Component/Navbar/Dropdown/profileDrop.module.css
+++ b/src/Component/Navbar/Dropdown/profileDrop.module.css
@@ -6,8 +6,8 @@
      margin-top: -.3rem;
 }
 .des{
-    width: 2rem;
-    height: 2rem;
+    width: 20px;
+    height: 20px;
     border-radius: 2rem;
 
 }
