--- a/src/Component/Shopingsection/Productdetails/Product.module.css
+++ b/src/Component/Shopingsection/Productdetails/Product.module.css
@@ -187,16 +187,23 @@ body {
   width: 485px;
   height: 127px;
   display: flex;
+  
 }
 .color_box {
-  background-color: #bbc1f8;
+  background-color: #BBC1F8;
   width: 60px;
   height: 60px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   gap: 10px;
   text-align: center;
   line-height: 75px;
   font-size: 30px;
+  margin: left -10px;;
+}
+
+.color_box :hover {
+  padding: 10px;
+  border: 5px solid rgb(143, 72, 236);
 }
 @media (min-width: 100px) and (max-width: 900px) {
   .sizeresponsive {
