--- a/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
@@ -46,9 +46,10 @@
 }
 
 .texareawash{
-  width:400px;
-    height:250px;
-     border:1px solid
+  width:800px;
+    height:100px;
+     border:2px solid black
+     ;border-radius: 5px;
 }
 
 .inputFieldmaterial{
