--- a/src/Component/Shopingsection/Shopping.module.css
+++ b/src/Component/Shopingsection/Shopping.module.css
@@ -172,17 +172,12 @@
 .like_button :hover {
   color: red;
 }
-
-/* input[type="range"]::-moz-range-track {
-  background: #053a5f;
-  height: 0.5rem;
-} */
-/* input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none; 
-  appearance: none;
-  margin-top: -12px; 
-  background-color: black;
-} */
+.loadingSpinner {
+  margin-top: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 @media (max-width: 600px) {
   input[type="range"] {
