update add to cart

--- a/src/Component/Header/Cart/cart.module.css
+++ b/src/Component/Header/Cart/cart.module.css
@@ -14,7 +14,7 @@
   margin-bottom: 1rem;
 
   padding: 10px;
-  box-shadow: 5px 5px #888888;
+  /* box-shadow: 5px 5px #888888; */
 }
 
 @media (max-width: 768px) {
