added addprodut ui

--- a/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
@@ -261,3 +261,53 @@ flex-direction: column;
   }
 }
 
+
+
+
+/* -------------latest------------- */
+
+.headingdiv{
+  width: 100%;
+height: 70px;
+
+}
+.headingText{
+  font-weight: bold;
+  margin-right: 1000px;
+  margin-top: 10px;
+}
+.maindiv{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(247, 251, 255);
+}
+.mainone{
+  margin-left: 100px;
+   width: 50%;
+background-color: rgb(247, 251, 255);
+}
+.maintwo{
+  width: 50%;
+  background-color: rgb(247, 251, 255);
+}
+.inputDiv{
+  display: flex;
+  flex-direction: column;
+  width: 1000px;
+}
+.inputField{
+  text-indent: 10px;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .maindiv{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(247, 251, 255);
+  }
+}
