--- a/src/Component/Test/Test.module.css
+++ b/src/Component/Test/Test.module.css
@@ -1,12 +1,12 @@
 .headingdiv{
     width: 100%;
-  height: 100px;
+  height: 70px;
 
 }
 .headingText{
     font-weight: bold;
     margin-right: 1000px;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 .maindiv{
     display: flex;
@@ -32,3 +32,14 @@ background-color: rgb(247, 251, 255);
 .inputField{
     text-indent: 10px;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .maindiv{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(247, 251, 255);
+    }
+  }
