--- a/src/Component/Header/Home/TopTrends/StrengthUI/Strength.module.css
+++ b/src/Component/Header/Home/TopTrends/StrengthUI/Strength.module.css
@@ -1,7 +1,9 @@
 .main {
-    height: 500px;
+    height: 600px;
   }
-  
+  .content{
+    margin-top:30px;
+  }
   .one {
     display: flex;
     flex-direction: row;
@@ -38,10 +40,12 @@
   .headingtext {
     color: red;
     font-weight: bolder;
+    font-size: 2rem;
   }
   
   .subheading {
     color: black;
+     font-size: 2rem;
   }
   
   @media only screen and (max-width: 549px) {
