--- a/src/Component/Header/Home/AboutSection/About.module.css
+++ b/src/Component/Header/Home/AboutSection/About.module.css
@@ -21,13 +21,14 @@
   width: 100%;
   height: 100%;
   background-color: black;
-  opacity: 0.2;
+  opacity: 0.5;
 }
 .Headingtext{
   color: white;
   align-items: center;
   font-weight: bolder;
   font-size: x-large;
+  z-index: 999;
 
 }
 .contenttext{
@@ -38,7 +39,7 @@
   align-items: center;
   text-align: center;
   z-index: 999;
-  opacity: 1;
+ 
 }
 .aboutustext{
   font-size: 4rem;
@@ -115,7 +116,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 90%;
+    height: 100%;
     background-color: black;
     opacity: 0.5;
   }
