--- a/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
@@ -147,15 +147,20 @@ width: 20%;
 }
 
 .blue {
-  border-radius: 5px;
-  background-color: rgb(148, 151, 144);
+  border-radius: 0px;
+  border: 1px solid #DDDDDD;
   display: flex;
   flex-direction: row;
+  height: 40px;
+  width: 400px;
+  text-indent: 10px;
 }
 
 
 .quantityInput {
-  width: 20%;
+  width: 30%;
+  height: 40px;
+  margin-left: 10px;
 }
 .imgeupload{
   width: '300px';
