--- a/src/Component/Shopingsection/Productdetails/Product.module.css
+++ b/src/Component/Shopingsection/Productdetails/Product.module.css
@@ -202,6 +202,21 @@ body {
   /* padding: 10px; */
   border: 5px solid rgb(5, 0, 10);
 }
+
+
+.footer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: black;
+}
+
+
+
+
+
 @media (min-width: 100px) and (max-width: 900px) {
   .sizeresponsive {
     display: flex;
