--- a/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
@@ -9,6 +9,7 @@
   width: 100%;
 }
 .sidebar {
+  position: sticky;
   /* position: absolute; */
 
   background-color: brown;
@@ -47,7 +48,7 @@
 }
 
 .sidebar_items li:hover {
-  background: #252831;
+  background: #19191a;
 }
 
 /* .sidebar:hover {
@@ -104,7 +105,7 @@ p {
   
 
   .sidebar {
-    /* z-index: 999; */
+    z-index: 999;
     position: sticky;
 
     width: 100%;
