--- a/src/Component/Navbar/Profile/AdminDashboard/ProductDetails.jsx/productDetailAdmin.module.css
+++ b/src/Component/Navbar/Profile/AdminDashboard/ProductDetails.jsx/productDetailAdmin.module.css
@@ -1,9 +1,9 @@
-body {
-  font-family: 'Roboto Condensed', sans-serif;
-  background-color: #f5f5f5
+
+.about {
+  font-size: 15px;
 }
-.about{
-font-size: x-large;
+.card{
+  background: white;
 }
 .hedding {
   font-size: 20px;
@@ -37,12 +37,12 @@ font-size: x-large;
 }
 
 .right-side-pro-detail .price-pro {
-  color: #E45641;
+  color: #e45641;
 }
 
 .right-side-pro-detail .tag-section {
   font-size: 18px;
-  color: #5D4C46;
+  color: #5d4c46;
 }
 
 .pro-box-section .pro-box img {
@@ -50,390 +50,391 @@ font-size: x-large;
   height: 200px;
 }
 
-
-
 /* /////////////latest/////////////
 */
 
-.heads{
-display: flex;
-flex-direction: row;
+.heads {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.icons{
-position: absolute;
-display: flex;
-flex-direction: row;
-right: 0;
+/* .icons {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  right: 0;
+} */
+.wishicon {
+  color: red;
+  width: 50px;
+  height: 30px;
+  background-color: rgb(247, 216, 217);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mainicon {
+  height: 30px;
+  width: 30px;
+}
+.tagandshare {
+  height: 30px;
+  width: 40px;
+  background-color: rgb(119, 198, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  opacity: 0.4;
+}
+.price {
+  margin-top: 70px;
+}
+.brand {
+  font-weight: bolder;
+  font-size: 1.8rem;
+  color: black;
+}
+.starreviewmain {
+  display: flex;
+  flex-direction: row;
+  width: 200px;
+  height: 20px;
 
+  margin-left: 20px;
 }
-.wishicon{
-color: red;
-width: 90px;
-height: 30px;
-background-color:rgb(247,216,217);
-display: flex;
-justify-content: center;
-align-items: center;
+.sizeresponsive {
+  display: flex;
+  flex-direction: row;
 }
-.mainicon{
-height: 30px;
-width: 30px;
+.star {
+  height: 100%;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(247, 216, 217);
+  color: orange;
 }
-.tagandshare{
-height: 30px;
-width :40px;
-background-color:rgb(119,198,255);
-display: flex;
-justify-content: center;
-align-items: center;
-margin-left: 10px;
-opacity: .4;
-
+.review {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height: 100%;
+  background-color: #c9e0eb;
+  margin-left: 10%;
+  color: blue;
 }
-.price{
-margin-top: 70px;
+.reviewtext {
+  color: blue !important;
+  margin-left: 5px;
 }
-.brand{
-font-weight: bolder;
-font-size: 1.8rem ;
-color: black;
-}
-.starreviewmain{
-display: flex;
-flex-direction: row;
-width: 200px;
-height: 20px;
-
-margin-left: 20px;
-}
-.star{
-height: 100%;
-width: 30%;
-display: flex;
-justify-content: center;
-align-items: center;
-background-color: rgb(247,216,217);
-color: orange;
-}
-.review{
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-width: 60%;
-height: 100%;
-background-color: #c9e0eb;
-margin-left: 10%;
-color: blue;
-}
-.reviewtext{
-color: blue !important;
-margin-left: 5px;
-}
-.priceandpercentage{
-display: flex;
-flex-direction: row;
-margin-top: 20px;
-}
-.percentagetext{
-margin-left: 15px;
-display: flex;
-flex-direction: row;
-font-weight: lighter;
+.priceandpercentage {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
 }
 
 
+.form-group {
+  width: 80px;
+}
+.cart {
+  display: flex;
+  flex-direction: row;
+}
+.totalmain {
+  height: 75px;
+  border: solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* .lasthead {
+  height: 150px;
+  width: 500px;
+  border: solid #c9e0eb;
+} */
+.headone {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+}
+.oneone {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 10%;
+}
 
-.form-group{
-width: 80px;
+.activeHeading {
+  color: red;
 }
-.cart{
-display: flex;
-flex-direction: row;
+.delivery1 {
+  margin-left: 45rem;
 }
-.totalmain{
-height: 75px;
-border: solid black;
-display: flex;
-justify-content: center;
-align-items: center;
+.color_Container {
+  margin-top: 30px;
+  width: 485px;
+  height: 127px;
+  display: flex;
+  
 }
-.lasthead{
-height: 150px;
-width: 500px;
-border: solid #c9e0eb;
+.color_box {
+  background-color: #BBC1F8;
+  width: 60px;
+  height: 60px;
+  /* margin-top: 20px; */
+  gap: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+  margin: left -10px;;
 }
-.headone{
-height: 60px;
-width: 100%;
+
+.color_box:hover {
+  /* background:black; */
+  /* padding: 10px; */
+  border: 5px solid rgb(5, 0, 10);
+}
+
+
+.footer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: black;
+}
 
 
 
-display: flex;
-flex-direction: row;
-margin-top: 5px;
-}
-.oneone{
-display: flex;
-justify-content: center;
-align-items: center;
-height: 100%;
-width: 10%;
 
-}
-.tabs{
-display: flex;
-flex-direction: row;
-margin-left: 70px;
-}
-.activeHeading{
-color: red;
-}
-.delivery1{
-margin-left: 45rem;
-}
-@media (min-width:360px) and (max-width:900px) {
+
+@media (min-width: 100px) and (max-width: 900px) {
+  .sizeresponsive {
+    display: flex;
+    flex-direction: column;
+  }
   .pro-box-section .pro-box img {
-      height: auto; }
-      .descrip{
-        margin: 40px;
-        border-top: 0.3rem solid rgb(235, 13, 13);
-        width:80%;
-        margin-right: 20px;
-        
-        /* margin-right: 30rem; */
+    height: auto;
+  }
+  .descrip {
+    margin: 40px;
+    border-top: 0.3rem solid rgb(141, 137, 137);
+    width: 80%;
+    margin-right: 20px;
 
-      }
-    
-    }
-
-      .control-btn button {
-          background: white;
-          width: 30px;
-          height: 30px;
-          border-radius: 50%;
-          cursor: pointer;
-          box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          transition: 0.5s;
-          padding: 2px;
-        }
-        
-        .control-btn .next {
-          position: absolute;
-          top: 40%;
-          right: 20px;
-        }
-        
-        .control-btn .prev {
-          position: absolute;
-          top: 40%;
-          left: 20px;
-          z-index: 99;
-        }
-        .control-btn .icon {
-          font-size: 25px;
-        }
-
-        .desgin{
-         color: red;
-          height:50px;
-          /* margin-left: 10rem; */
-          width: 4rem;
-          /* margin-top: 6rem; */
-          margin-left:27px;
-          justify-content: 1rem;
-          font-weight: bold;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-         
-        }
-        .tottal{
-          justify-content: 2rem;
-          margin-left: -2rem;
-        }
-        .desgin{
-          border-radius: 1rem;
-          height: 4rem;
-       
-          width: 6rem;
-      
-          margin-left: 0rem;
-          justify-content: 1rem;
-         
-        }
-        
-        
-        @media (min-width:360px) and (max-width:640px){
-          .tottal{
-              justify-content: .2rem;
-              margin-left: -1rem;
-              display:flex;
-              justify-content: 'center';
-              align-items: 'center';
-              flex-direction: row;
-              font-weight: .1rem;               
-            }
-            .checkbox{
-              font-weight: .1rem;
-              
-              justify-content: -.2rem;
-              margin-right: -5rem;
-              display:flex; 
-               flex-direction: column;   
-                          } 
-                          .delivery1{
-                            margin-left: 0rem;
-                          }
-          }
-        .add-to-cart{
-          display: flex;
-          flex-direction: row;
-          background-color: #E45641;
-          border-radius: 0rem;
-          height: 75px;
-          justify-content: center;
-          align-items: center;
-        }
-        .descrip{
-          margin: 70px;
-          border-top: 0.4rem solid rgb(235, 13, 13);
-          width:80%
-          /* margin-right: 30rem; */
-
-        }
-        .text1{
-          font-weight: .1rem;
-        } 
-        .heads{
-          display: flex;
-          flex-direction: row;
-        
-        }
-        
-.heads{
-display: flex;
-flex-direction: row;
-}
-.icons{
-position: absolute;
-display: flex;
-flex-direction: row;
-right: 0;
-
-}
-.wishicon{
-color: red;
-width: 90px;
-height: 30px;
-background-color:rgb(247,216,217);
-display: flex;
-justify-content: center;
-align-items: center;
-}
-.mainicon{
-height: 30px;
-width: 30px;
-}
-.tagandshare{
-height: 30px;
-width :40px;
-background-color:rgb(119,198,255);
-display: flex;
-justify-content: center;
-align-items: center;
-margin-left: 10px;
-opacity: .4;
-
-}
-.price{
-margin-top: 70px;
-}
-.brand{
-font-weight: bolder;
-font-size: 1.8rem ;
-color: black;
-}
-.starreviewmain{
-display: flex;
-flex-direction: row;
-width: 200px;
-height: 20px;
-
-margin-left: 20px;
-}
-.star{
-height: 100%;
-width: 30%;
-display: flex;
-justify-content: center;
-align-items: center;
-background-color: rgb(247,216,217);
-color: orange;
-}
-.review{
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-width: 60%;
-height: 100%;
-background-color: #c9e0eb;
-margin-left: 10%;
-color: blue;
-}
-.reviewtext{
-color: blue !important;
-margin-left: 5px;
-}
-.priceandpercentage{
-display: flex;
-flex-direction: row;
-margin-top: 20px;
-}
-.percentagetext{
-margin-left: 15px;
-display: flex;
-flex-direction: row;
-font-weight: lighter;
+    /* margin-right: 30rem; */
+  }
 }
 
+.control-btn button {
+  background: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  padding: 2px;
+}
 
+.control-btn .next {
+  position: absolute;
+  top: 40%;
+  right: 20px;
+}
 
-.form-group{
-width: 60px;
+.control-btn .prev {
+  position: absolute;
+  top: 40%;
+  left: 20px;
+  z-index: 99;
 }
-.cart{
-display: flex;
-flex-direction: row;
+.control-btn .icon {
+  font-size: 25px;
 }
-.totalmain{
-height: 75px;
-border: solid black;
-display: flex;
-justify-content: center;
-align-items: center;
+
+.desgin {
+  color: red;
+  height: 60px;
+  width: 5rem;
+  margin-left: 27px;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.lasthead{
-height: 150px;
-width: 370px;
-border: solid #c9e0eb;
-margin-left: 10px;
+
+/* .desgin {
+  border-radius: 1rem;
+  height: 4rem;
+
+  width: 6rem;
+
+  margin-left: 0rem;
+  justify-content: 1rem;
+} */
+@media (min-width: 100px) and (max-width: 640px) {
+  .tottal {
+    margin: 10px;
+    margin-left: -1rem;
+    display: flex;
+    justify-content: "center";
+    align-items: "center";
+    /* flex-direction: row; */
+    font-weight: 0.1rem;
+  }
+  .checkbox {
+    font-weight: 0.1rem;
+
+    justify-content: -0.2rem;
+    margin-right: -5rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .delivery1 {
+    margin-left: 0rem;
+  }
+  .sizeresponsive {
+    display: flex;
+    flex-direction: column;
+  }
 }
-.headone{
-height: 60px;
-width: 100%;
-display: flex;
-flex-direction: row;
-margin-top: 5px;
+.add_to_cart {
+  display: flex;
+  flex-direction: row;
+  background-color: #bf0a2a;
+  border-radius: 0rem;
+  width: 370px;
+  height: 65px;
+  color: #f5f5f5;
+  justify-content: center;
+  align-items: center;
 }
-.oneone{
-display: flex;
-justify-content: center;
-align-items: center;
-height: 100%;
-width: 15%;
+.descrip {
+  
+  margin-left: 12px;
+  width: 98%;
+}
+.text1 {
+  font-weight: 0.1rem;
+}
+.icons {
+  /* position: absolute; */
+  display: flex;
+  flex-direction: row;
+  right: 0;
+}
+/* .mainicon {
+  height: 30px;
+  width: 30px;
+} */
+.tagandshare {
+  height: 30px;
+  width: 40px;
+  background-color: rgb(119, 198, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  opacity: 0.4;
+}
+.price {
+  margin-top: 70px;
+}
+.brand {
+  font-weight: bolder;
+  font-size: 1.8rem;
+  color: black;
+}
+.starreviewmain {
+  display: flex;
+  flex-direction: row;
+  width: 200px;
+  height: 20px;
+
+  margin-left: 20px;
+}
+.star {
+  height: 100%;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(247, 216, 217);
+  color: orange;
+}
+.review {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height: 100%;
+  background-color: #c9e0eb;
+  margin-left: 10%;
+  color: blue;
+}
+.reviewtext {
+  color: blue !important;
+  margin-left: 5px;
+}
+.priceandpercentage {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+.percentagetext {
+  margin-left: 15px;
+  margin-top: -5px;
+  display: flex;
+  flex-direction: row;
+  font-weight: lighter;
+}
+
+.form-group {
+  width: 60px;
+}
+.cart {
+  display: flex;
+  flex-direction: row;
+}
+.totalmain {
+  height: 75px;
+  border: solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lasthead {
+  height: 150px;
+  width: 370px;
+  border: solid #c9e0eb;
+  /* margin-left: 20px; */
+}
+.headone {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+}
+.oneone {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 15%;
 }
