--- a/src/Component/Shopingsection/Productdetails/Product.module.css
+++ b/src/Component/Shopingsection/Productdetails/Product.module.css
@@ -1,9 +1,9 @@
-body {
-  font-family: "Roboto Condensed", sans-serif;
-  background-color: #f5f5f5;
-}
+
 .about {
   font-size: 15px;
+}
+.card{
+  background: white;
 }
 .hedding {
   font-size: 20px;
