Cart and seller dashboard

--- a/src/Component/Navbar/Profile/AdminDashboard/productRequest.module.css
+++ b/src/Component/Navbar/Profile/AdminDashboard/productRequest.module.css
@@ -1,7 +1,10 @@
 .sliderContainer {
-  margin: 20px;
-  /* max-width: 500px; */
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-left: -20px;
   padding: 0 20px;
+
 }
 
 .card {
