--- a/src/Component/Shopingsection/Shopping.module.css
+++ b/src/Component/Shopingsection/Shopping.module.css
@@ -7,6 +7,38 @@
   color: #3b71ca !important;
 }
 
+.paginateLabel {
+  gap: 10px; /* Adjust the value as needed to add space */
+}
+/* pagination.css */
+
+.pagination {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
+.pagination li {
+  margin: 0 5px;
+}
+
+.pagination li a {
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: #ee0505;
+  color: #fff;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+.pagination li.active a {
+  background-color: #e74c3c;
+}
+
+.pagination li a:hover {
+  background-color: #a5aea3;
+}
+
 .card-text {
   white-space: nowrap;
   overflow: hidden;
@@ -186,6 +218,9 @@
   justify-content: center;
   align-items: center;
 }
+
+
+
 
 @media (max-width: 600px) {
   input[type="range"] {
