--- a/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/sellerDash.module.css
@@ -1,33 +1,22 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
 .mainDiv {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row;
   height: 100%;
-  width: 100%;
+  width: 100%; */
 }
-.sidebar {
-  position: sticky;
-  /* position: absolute; */
 
-  background-color: brown;
-  /* transition: width 0.8s; */
+.sidebar {
+  position: fixed;
+  height: 570px;
+  background: rgb(236, 65, 65);
+  overflow-y: scroll;
+  bottom: 0;
 }
 
 .content {
   width: 80%;
-  /* justify-content: center; */
-  /* background: blue; */
+  margin-left: 20%;
 }
-
-/* sideBar {
-  min-width: 100px;
-  max-width: 100px;
-  background: red;
-} */
 
 .sidebar_items {
   color: rgb(236, 65, 65);
@@ -103,15 +92,13 @@ p {
     display: none;
   }
 
-  
-
   .sidebar {
     z-index: 999;
     position: sticky;
 
     width: 100%;
     height: 50px;
-    top: 10px;;
+    top: 10px;
   }
   .sidebar_items {
     flex-direction: row;
