--- a/src/Component/Footer/Footer.module.css
+++ b/src/Component/Footer/Footer.module.css
@@ -224,7 +224,7 @@
 
 @media screen and (max-width: 600px) {
   .hhhhh {
-    background-color: #183865;
+    /* background-color: #183865; */
     align-items: center;
     color: aliceblue;
     margin-top: -5rem;
