--- a/src/Component/Header/Home/BigDeals/BigDeals.module.css
+++ b/src/Component/Header/Home/BigDeals/BigDeals.module.css
@@ -22,7 +22,8 @@
   height: 400px;
   width: 500px;
   border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878);
+  /* border: 1px solid black; */
+  /* box-shadow: 0 0px 8px rgba(34, 9, 9, 0.878); */
   
 }
 .bg{
@@ -35,8 +36,8 @@
   display: block;
   margin: 0 auto;
   max-width: 100%;
-  height: 25rem;
-  width: 600px;
+ 
+
 }
 /* .seeMore{
   margin-left: 35rem;
@@ -85,7 +86,7 @@
   height: 30px;
   border-radius: 50%;
   cursor: pointer;
-  box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+  /* box-shadow: 0 0px 6px rgb(0 0 0 / 16%); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -149,7 +150,7 @@
   height: 350px;
   width: 390px;
   border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878);
+
   
 }
 .bg{
@@ -169,3 +170,62 @@
   width: 100px;
 }
 }
+
+
+@media (max-width: 1280px){
+
+  .sliderContainer {
+    margin: 0 auto;
+    max-width: 1600px;
+    padding: 0 20px;
+    height: 600px;
+  
+  }
+  
+  .card {
+   
+    display: flex;
+    flex-direction: column;
+  
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color:#fff;
+    height: 350px;
+    width: 390px;
+    border-radius: 10px;
+    
+    
+  }
+  .bg{
+    background-color: #fff;
+    margin-top: 1rem;
+  
+  }
+  
+  .card img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: 25rem;
+    width: 500px;
+  }
+  .customerheading{
+    width: 100px;
+  }
+  }
+  @media only screen and (max-width: 589px) {
+    
+    .card {
+  
+      display: flex;
+      flex-direction: column;
+    
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      background-color:#fff;
+      height: 350px;
+      width: 220px;
+      border-radius: 10px;
+      box-shadow: 0 0px 0px 
+  }
+  }
