--- a/src/Component/Header/Home/NewArrival/NewArrival/NewArrival.module.css
+++ b/src/Component/Header/Home/NewArrival/NewArrival/NewArrival.module.css
@@ -17,11 +17,12 @@
   width: 16rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  background-color:#fff;
+  margin-right: 20px;
+  /* background-color:#fff; */
   height: 400px;
   width: 500px;
   border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878);
+  /* box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878); */
   
 }
 .bg{
@@ -30,40 +31,11 @@
 
 }
 
-.card img {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  height: 25rem;
-  width: 600px;
-}
 /* .seeMore{
   margin-left: 35rem;
 } */
-@media only screen and (max-width: 768px) {
-  /* .card {
-    width: 100%;
-    height: auto;
-  } */
 
-  .card img {
-    height: 25rem;
-    border-radius: 10px 10px 0 0;
-  }
-}
-@media only screen and (max-width: 589px) {
-  .card {
-    width: 14rem;
-  }
 
-  .card img {
-    height: 20rem;
-    border-radius: 10px 10px 0 0;
-  }
-  .seeMore{
-    margin-left: 10rem;
-  }
-}
 .card h2 {
   font-size: 24px;
   margin-top: 20px;
@@ -148,7 +120,7 @@
   height: 350px;
   width: 390px;
   border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878);
+  /* box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878); */
   
 }
 .bg{
@@ -166,5 +138,27 @@
 }
 .customerheading{
   width: 100px;
+}
+}
+
+@media only screen and (max-width: 589px) {
+  
+  .card {
+
+    display: flex;
+    flex-direction: column;
+  
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color:#fff;
+    height: 350px;
+    width: 220px;
+    border-radius: 10px;
+    /* box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878); */
+}
+
+
+.seeMore{
+  margin-left: 10rem;
 }
 }
